# polars-training

./: .gitignore  pyproject.toml
notebooks/: 00-Intro.ipynb
