[tool.poetry]
name = "polars-training"
version = "0.1.0"
description = ""
authors = ["Ignacio Moya <imoyared@gmail.com>"]
readme = "README.md"
packages = [{include = "polars_training"}]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.19.17"
pandas = "^2.1.3"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
pyarrow = "^14.0.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
